--- a/assets/css/angello.css
+++ b/assets/css/angello.css
@@ -4,6 +4,7 @@ body {
     background-color: #36393D;
     background: url(../img/bg-wood.jpg);
     overflow: hidden;
+    height: 100%;
 }
 
 body.loading {
